force-app/main/default/objects/Seat_Status_Change__e/fields/Reservation_Id__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Id__c</fullName>
    <label>Reservation Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>