force-app/main/default/objects/Seat_Status_Change__e/fields/Seat_Id__c.field-meta.xml
<CustomField>
    <fullName>Seat_Id__c</fullName>
    <label>Seat Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>