force-app/main/default/objects/Seat_Status_Change__e/fields/Showtime_Id__c.field-meta.xml
<CustomField>
    <fullName>Showtime_Id__c</fullName>
    <label>Showtime Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>